kubernetes: updates to kops yaml and namenode deployment files -- need large enough instance and ubuntu image

--- a/kubernetes/pocket-namenode-deployment.yaml
+++ b/kubernetes/pocket-namenode-deployment.yaml
@@ -15,3 +15,7 @@ spec:
         image: anakli/pocket-namenode
         ports:
         - containerPort: 9070
+#      - name: pocket-datanode-dram
+#        image: anakli/pocket-datanode-dram
+#        ports:
+#        - containerPort: 50030
