kubernetes: README instructions for setup, update yaml files and scripts

--- a/kubernetes/pocket-namenode-deployment.yaml
+++ b/kubernetes/pocket-namenode-deployment.yaml
@@ -10,12 +10,11 @@ spec:
         app: pocket-namenode
     spec:
       hostNetwork: true
+      hostname: pocket-namenode
       containers:
       - name: pocket-namenode
         image: anakli/pocket-namenode
         ports:
         - containerPort: 9070
-#      - name: pocket-datanode-dram
-#        image: anakli/pocket-datanode-dram
-#        ports:
-#        - containerPort: 50030
+      nodeSelector: 
+        pocketnodetype: "metadata"
