--- a/kubernetes/pocketcluster.k8s.local.yaml
+++ b/kubernetes/pocketcluster.k8s.local.yaml
@@ -6,7 +6,6 @@ metadata:
 spec:
   api:
     loadBalancer:
-      #type: Public
       type: Internal
   authorization:
     rbac: {}
@@ -37,19 +36,15 @@ spec:
   sshAccess:
   - 0.0.0.0/0
   subnets:
-#  - cidr: 10.1.32.0/19
   - cidr: 10.1.128.0/17
     name: us-west-2c
     type: Private
     zone: us-west-2c
-#  - cidr: 10.1.0.0/22
   - cidr: 10.1.0.0/24
     name: utility-us-west-2c
     type: Utility
     zone: us-west-2c
   topology:
-    #bastion:
-    #  bastionPublicName: bastion.pocketcluster.k8s.local
     dns:
       type: Public
     masters: private
@@ -65,9 +60,7 @@ metadata:
     kops.k8s.io/cluster: pocketcluster.k8s.local
   name: master-us-west-2c
 spec:
-  #image: kope.io/k8s-1.8-debian-jessie-amd64-hvm-ebs-2018-02-08
-  image: ami-4e79ed36
-  #machineType: m5.xlarge
+  image: kope.io/k8s-1.8-debian-jessie-amd64-hvm-ebs-2018-02-08
   machineType: m3.medium
   maxSize: 1
   minSize: 1
@@ -87,17 +80,38 @@ metadata:
     kops.k8s.io/cluster: pocketcluster.k8s.local
   name: dram-nodes
 spec:
-  #image: kope.io/k8s-1.8-debian-jessie-amd64-hvm-ebs-2018-02-08
-  image: ami-4e79ed36
-  #machineType: t2.medium
+  image: kope.io/k8s-1.8-debian-jessie-amd64-hvm-ebs-2018-02-08
   machineType: r4.large
   maxSize: 1
   minSize: 1
   nodeLabels:
     kops.k8s.io/instancegroup: dram-nodes
     spot: "true"
-    flash: "false"
-  rootVolumeSize: 10
+    pocketnodetype: "dram"
+  rootVolumeSize: 12
+  role: Node
+  subnets:
+  - us-west-2c
+
+---
+
+apiVersion: kops/v1alpha2
+kind: InstanceGroup
+metadata:
+  creationTimestamp: null
+  labels:
+    kops.k8s.io/cluster: pocketcluster.k8s.local
+  name: metadata-nodes
+spec:
+  image: kope.io/k8s-1.8-debian-jessie-amd64-hvm-ebs-2018-02-08
+  machineType: m5.large
+  maxSize: 1
+  minSize: 1
+  nodeLabels:
+    kops.k8s.io/instancegroup: metadata-nodes
+    spot: "true"
+    pocketnodetype: "metadata"
+  rootVolumeSize: 12
   role: Node
   subnets:
   - us-west-2c
@@ -112,36 +126,15 @@ metadata:
     kops.k8s.io/cluster: pocketcluster.k8s.local
   name: nvme-nodes
 spec:
-  #image: kope.io/k8s-1.8-debian-jessie-amd64-hvm-ebs-2018-02-08
-  image: ami-4e79ed36
-  machineType: t2.medium
-  maxSize: 1
-  minSize: 1
+  image: kope.io/k8s-1.8-debian-jessie-amd64-hvm-ebs-2018-02-08
+  machineType: i3.large
+  maxSize: 0
+  minSize: 0
   nodeLabels:
     kops.k8s.io/instancegroup: nvme-nodes
     spot: "false"
-    flash: "true"
-  rootVolumeSize: 10
+    pocketnodetype: "nvme"
+  rootVolumeSize: 12
   role: Node
   subnets:
   - us-west-2c
-
-#---
-#apiVersion: kops/v1alpha2
-#kind: InstanceGroup
-#metadata:
-#  creationTimestamp: null
-#  labels:
-#    kops.k8s.io/cluster: pocketcluster.k8s.local
-#  name: bastions
-#spec:
-#  #image: kope.io/k8s-1.8-debian-jessie-amd64-hvm-ebs-2018-02-08
-#  image: ami-4e79ed36
-#  machineType: t2.micro
-#  maxSize: 1
-#  minSize: 1
-#  nodeLabels:
-#    kops.k8s.io/instancegroup: bastions
-#  role: Bastion
-#  subnets:
-#  - utility-us-west-2c
