--- a/kubernetes/pocketcluster.k8s.local.yaml
+++ b/kubernetes/pocketcluster.k8s.local.yaml
@@ -84,7 +84,7 @@ metadata:
   name: dram-nodes
 spec:
   image: kope.io/k8s-1.8-debian-jessie-amd64-hvm-ebs-2018-02-08
-  machineType: r4.large
+  machineType: r4.2xlarge
   maxSize: 0
   minSize: 0
   nodeLabels:
@@ -107,7 +107,7 @@ metadata:
   name: metadata-nodes
 spec:
   image: kope.io/k8s-1.8-debian-jessie-amd64-hvm-ebs-2018-02-08
-  machineType: m5.large
+  machineType: m5.xlarge
   maxSize: 1
   minSize: 1
   nodeLabels:
@@ -131,13 +131,62 @@ metadata:
 spec:
   #image: kope.io/k8s-1.8-debian-jessie-amd64-hvm-ebs-2018-02-08
   image: ami-310a6249
-  machineType: i3.xlarge
+  machineType: i3.2xlarge
   maxSize: 1
   minSize: 1
   nodeLabels:
     kops.k8s.io/instancegroup: nvme-nodes
     spot: "false"
     pocketnodetype: "nvme"
+  rootVolumeSize: 15
+  role: Node
+  subnets:
+  - pocket-kube-private
+
+---
+
+apiVersion: kops/v1alpha2
+kind: InstanceGroup
+metadata:
+  creationTimestamp: null
+  labels:
+    kops.k8s.io/cluster: pocketcluster.k8s.local
+  name: hdd-nodes
+spec:
+  #image: kope.io/k8s-1.8-debian-jessie-amd64-hvm-ebs-2018-02-08
+  image: ami-310a6249
+  machineType: h1.2xlarge
+  maxSize: 0
+  minSize: 0
+  nodeLabels:
+    kops.k8s.io/instancegroup: hdd-nodes
+    spot: "false"
+    pocketnodetype: "hdd"
+  rootVolumeSize: 15
+  role: Node
+  subnets:
+  - pocket-kube-private
+
+---
+
+apiVersion: kops/v1alpha2
+kind: InstanceGroup
+metadata:
+  creationTimestamp: null
+  labels:
+    kops.k8s.io/cluster: pocketcluster.k8s.local
+  name: ssd-nodes
+spec:
+  #image: kope.io/k8s-1.8-debian-jessie-amd64-hvm-ebs-2018-02-08
+  image: ami-310a6249
+  #image: ami-a702d5df
+  machineType: i2.2xlarge
+  maxSize: 0
+  minSize: 0
+  nodeLabels:
+    kops.k8s.io/instancegroup: ssd-nodes
+    spot: "false"
+    pocketnodetype: "ssd"
   rootVolumeSize: 15
   role: Node
   subnets:
